햄버거 아이콘 모션 넣기, 모달창 닫기 버튼 만들기

--- a/index.html
+++ b/index.html
@@ -7,145 +7,123 @@
     <link rel="shortcut icon" href="images/nadyung_woman_sd_character.png" type="image/x-icon">
     <link rel="stylesheet" href="style/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,700;1,700&display=swap">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="scrollb">
-    <nav id="nav">
-        <h1 id="logo">
-            <a href="#">
-                로고임시
-            </a>
-        </h1>
-        <div class="mNav">
-            <div class="icon-wrap">
-                <div class="icon"></div>
+    <header>
+        <nav id="nav">
+            <h1 id="logo">
+                <a href="#">
+                    로고임시
+                </a>
+            </h1>
+            <div class="mNav">
+                <span class="nav-icon"></span><span class="nav-icon"></span><span class="nav-icon"></span><span class="nav-icon"></span>
             </div>
-        </div>
-        <ul class="menu">
-            <li class="active"><a href="#section1">Home</a></li>
-            <li><a href="#section2">About</a></li>
-            <li><a href="#section3">Web</a></li>
-            <li><a href="#section4">App</a></li>
-            <li><a href="#section5">Contact</a></li>
-        </ul>
-    </nav>
-    <div id="contents">
+            <ul class="menu">
+                <li class="active"><a href="#section1">Home</a></li>
+                <li><a href="#section2">About</a></li>
+                <li><a href="#section3">Web</a></li>
+                <li><a href="#section4">App</a></li>
+                <li><a href="#section5">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="contents">
         <div class="inner">
             <div id="section1">
-                <div style="outline: 10px solid orange" class="post_box">
-                    <div class="post-it-note post_1">J</div>
-                    <div class="post-it-note post_2">E</div>
-                    <div class="post-it-note post_3">O</div>
-                    <div class="post-it-note post_4">N</div>
-                    <div class="post-it-note post_5">G</div>
-                    <div class="post-it-note post_6">
-                        <?xml version="1.0" encoding="utf-8"?>
-                        <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                            viewBox="0 0 78 68" style="enable-background:new 0 0 78 68;" xml:space="preserve">
-                        <path class="st0" d="M36.5,17.5c0.34-0.63,7.8-14,19-14c8,0,12,3,13,8c2.77,13.87-28,47-28,47s-38-30-34-46c1.35-5.39,7.29-9,14-9
-                            C26.5,3.5,34.1,10.43,36.5,17.5z"/>
-                        </svg>
-                        <div class="post-it-note post_7"><img src="images/nadyung_man_sd_character.png" alt="박현정 제작 나듕 남자 SD 캐릭터 스티커"></div>
-                        <div class="post-it-note post_8"><img src="images/nadyung_woman_sd_character.png" alt="박현정 제작 나듕 여자 SD 캐릭터 스티커2"></div>
-                    </div>
-                </div><!--post box-->
-                <div class="scroll-downs">
-                    <div class="mousey">
-                        <div class="scroller"></div>
-                    </div>
-                    <p>scroll down</p>
+                <div class="home_text">
+                    <p><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></p>
                 </div>
             </div>
             <div id="section2">
                 <div class="skill_box s1">
                     <button class="skill_btn">Character</button>
                     <div class="panel">
-                        <section>
-                            <h3 class="c1">Responsibility</h3>
-                            <p>프로젝트 끝날 때까지 뼈를 묻는 성격</p>
-                        </section>
-                        <section>
-                            <h3 class="c2">Joyful</h3>
-                            <p>매사를 즐겁게! Joyful! Joypark!</p>
-                        </section>
-                        <section>
-                            <h3 class="c3">Energetic</h3>
-                            <p>열정이 넘치는 나! 박렬정!</p>
-                        </section>
+                        <dl>
+                            <dt class="c1">Responsibility</dt>
+                            <dd>프로젝트 끝날 때까지 뼈를 묻는 성격</dd>
+                        </dl>
+                        <dl>
+                            <dt class="c2">Joyful</dt>
+                            <dd>매사를 즐겁게! Joyful! Joypark!</dd>
+                        </dl>
+                        <dl>
+                            <dt class="c3">Energetic</dt>
+                            <dd>열정이 넘치는 나! 박렬정!</dd>
+                        </dl>
                     </div>
                 </div>
                 <div class="skill_box s2">
                     <button class="skill_btn">Skill</button>
                     <div class="panel">
-                        <section>
-                            <h3>Semantic Tag</h3>
-                            <p>정확한 컨텐츠의 식별을 위해 사용</p>
-                        </section>
-                        <section>
-                            <h3>Responsive Web</h3>
-                            <p>어디서 봐도 예쁜 반응형 웹의 경험</p>
-                        </section>
-                        <section>
-                            <h3>Trouble Shooter</h3>
-                            <p>코딩은 디버깅으로, 프로젝트는 적극적 의사소통과 참여로</p>
-                        </section>
-                        <section>
-                            <h3>Git/Github</h3>
-                            <p>개발 능률의 향상을 위해 VSCode와의 연동, 기록과 백업</p>
-                        </section>
-                        <section>
-                            <h3>Ps/Ai/Xd</h3>
-                            <p>다양한 편집툴(tool) 사용에 능숙</p>
-                        </section>
-                        <section>
-                            <h3>Keep at it</h3>
-                            <p>정말로 하고 싶은 일을 열정을 가지고 계속하는 자세</p>
-                        </section>
+                        <dl>
+                            <dt>Semantic Tag</dt>
+                            <dd>정확한 컨텐츠의 식별을 위해 사용</dd>
+                        </dl>
+                        <dl>
+                            <dt>Responsive Web</dt>
+                            <dd>어디서 봐도 예쁜 반응형 웹의 경험</dd>
+                        </dl>
+                        <dl>
+                            <dt>Trouble Shooter</dt>
+                            <dd>코딩은 디버깅으로, 프로젝트는 적극적 의사소통과 참여로</dd>
+                        </dl>
+                        <dl>
+                            <dt>Git/Github</dt>
+                            <dd>개발 능률의 향상을 위해 VSCode와의 연동, 기록과 백업</dd>
+                        </dl>
+                        <dl>
+                            <dt>Ps/Ai/Xd</dt>
+                            <dd>다양한 편집툴(tool) 사용에 능숙</dd>
+                        </dl>
+                        <dl>
+                            <dt>Keep at it</dt>
+                            <dd>정말로 하고 싶은 일을 열정을 가지고 계속하는 자세</dd>
+                        </dl>
                     </div>
                 </div>
                 <div class="skill_box s3">
                     <button class="skill_btn">Education</button>
                     <div class="panel">
-                        <section>
-                            <h3>웹퍼블리셔 과정 수료(그린아카데미)</h3>
-                            <p>2020. 02</p>
-                        </section>
-                        <section>
-                            <h3>유아교육과 졸업(대전보건대학)</h3>
-                            <p>2018. 02</p>
-                        </section>
-                        <section>
-                            <h3>기술과학 과정 졸업(해남고등학교)</h3>
-                            <p>2015. 02</p>
-                        </section>
+                        <dl>
+                            <dt>웹퍼블리셔 과정 수료(그린아카데미)</dt>
+                            <dd>2020. 02</dd>
+                        </dl>
+                        <dl>
+                            <dt>유아교육과 졸업(대전보건대학)</dt>
+                            <dd>2018. 02</dd>
+                        </dl>
+                        <dl>
+                            <dt>기술과학 과정 졸업(해남고등학교)</dt>
+                            <dd>2015. 02</dd>
+                        </dl>
                     </div>
                 </div>
                 <div class="skill_box s4">
                     <button class="skill_btn">License</button>
                     <div class="panel">
-                        <section>
-                            <h3>GTQ 1급</h3>
-                            <p>2019. 10</p>
-                        </section>
-                        <section>
-                            <h3>운전면허 2종</h3>
-                            <p>2019. 02</p>
-                        </section>
+                        <dl>
+                            <dt>GTQ 1급</dt>
+                            <dd>2019. 10</dd>
+                        </dl>
+                        <dl>
+                            <dt>운전면허 2종</dt>
+                            <dd>2019. 02</dd>
+                        </dl>
                     </div>
                 </div>
                 <div class="skill_box s5">
                     <button class="skill_btn">Blog</button>
                     <div class="panel">
-                        <section>
-                            <h3><a href="https://github.com/nadyungkr">1일 1커밋</a></h3>
-                            <p>CSS3, SVG, Animation, Javascript Study, Vue.js, Javascript Framework</p>
-                        </section>
-                        <section>
-                            <h3><a href="https://2rel.me/about">LoL Blog</a></h3>
-                            <p>League of Legends Game LOL Poster gallery</p>
-                        </section>
+                        <dl>
+                            <dt><a href="https://github.com/nadyungkr">1일 1커밋</a></dt>
+                            <dd>CSS3, SVG, Animation, Javascript Study, Vue.js, Javascript Framework</dd>
+                        </dl>
+                        <dl>
+                            <dt><a href="https://2rel.me/about">LoL Blog</a></dt>
+                            <dd>League of Legends Game LOL Poster gallery</dd>
+                        </dl>
                     </div>
                 </div>
             </div>
@@ -209,38 +187,65 @@
             </div>
             <div id="section4">
                 <div class="app_container">
-                    <div class="phone_content">
+                    <div class="phone_content purple">
                         <div class="glass">
                             <div class="camera"></div>
                             <div class="screen">
-                                <div class="shot1"></div>
-                                <div class="shot2"></div>
-                                    <?xml version="1.0" encoding="utf-8"?>
-                                    <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                        viewBox="0 0 32.2 28.5" style="enable-background:new 0 0 32.2 28.5;" xml:space="preserve">
-                                    <style type="text/css">
-                                        .st1{fill:none;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
-                                    </style>
-                                    <title>smile</title>
-                                    <g>
-                                        <path class="st1" d="M4.6,5.9c0.4-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
-                                        <path class="st1" d="M28.6,5.9c0.5-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
-                                    </g>
-                                    <path class="st1 mouth" d="M3.1,18.3c0,0,2,0,13.2,0s12.8,0,12.8,0"/>
-                                    </svg>
-
-
+                                <?xml version="1.0" encoding="utf-8"?>
+                                <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                    viewBox="0 0 32.2 28.5" style="enable-background:new 0 0 32.2 28.5;" xml:space="preserve">
+                                <style type="text/css">
+                                    .st1{fill:none;stroke:#5d486d;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
+                                </style>
+                                <g>
+                                    <path class="st1" d="M4.6,5.9c0.4-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
+                                    <path class="st1" d="M28.6,5.9c0.5-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
+                                </g>
+                                <path class="st1 mouth" d="M3.1,18.3c0,0,2,0,13.2,0s12.8,0,12.8,0"/>
+                                </svg>
+                            </div>
+                            <div class="hold"></div>
+                        </div>
+                    </div>
+                    <div class="phone_content blue">
+                        <div class="glass">
+                            <div class="camera"></div>
+                            <div class="screen">
+                                <?xml version="1.0" encoding="utf-8"?>
+                                <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                    viewBox="0 0 32.2 28.5" style="enable-background:new 0 0 32.2 28.5;" xml:space="preserve">
+                                <style type="text/css">
+                                    .st1{fill:none;stroke:#484f6d;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
+                                </style>
+                                <g>
+                                    <path class="st1" d="M4.6,5.9c0.4-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
+                                    <path class="st1" d="M28.6,5.9c0.5-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
+                                </g>
+                                <path class="st1 mouth" d="M3.1,18.3c0,0,2,0,13.2,0s12.8,0,12.8,0"/>
+                                </svg>
                             </div>
                             <div class="hold"></div>
                         </div>
                     </div>
                 </div>
-                <dl>
-                    <dt>APP Design</dt>
-                    <dd>Phone Model: IPhone X/XS</dd>
-                    <dd>수면을 돕는 앱</dd>
-                </dl>
+                <div class="app_info">
+                    <h2>APP Design</h2>
+                    <button class="modal_btn">Click Me !</button>
+                </div>
+                <div id="modal">
+                    <div class="modal_content">
+                        <div class="modal_header">
+                            <div class="close_modal">
+                                <p class="blind">모달 창 닫기</p>
+                                <span></span>
+                                <span></span>
+                            </div> 
+                        </div>
+                        <div class="modal_main"></div> 
+                    </div>  
+                </div>
             </div>
             <div id="section5">
                 <div class="contactImg">
@@ -258,7 +263,7 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <h3>contact me</h3>
+                    <h2>contact me</h2>
                     <form action="https://script.google.com/macros/s/AKfycbzM9Jp4VS-2FS9tznvYgKimLqjOAlj-EstJ6MR6qQ/exec" 
                         method="POST" class="gform" data-email="puiux.kr@gmail.com">
                         <fieldset>
@@ -282,7 +287,8 @@
                 </div>
             </div>
         </div><!--inner-->
-    </div>
+    </main>
+    <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script data-cfasync="false" src="js/form-submission-handler.js"></script>
