홈화면 수정, 로딩 화면 완성

--- a/index.html
+++ b/index.html
@@ -9,25 +9,29 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body class="scrollb">
+<body>
+    <div class="loader-wrapper">
+        <div class="loader">로딩중입니다</div>
+    </div>
     <header>
-        <nav id="nav">
+        <div class="inner">
             <h1 id="logo">
                 <a href="#">
-                    로고임시
-                </a>
+                        로고임시</a>
             </h1>
-            <div class="mNav">
-                <span class="nav-icon"></span><span class="nav-icon"></span><span class="nav-icon"></span><span class="nav-icon"></span>
-            </div>
-            <ul class="menu">
-                <li class="active"><a href="#section1">Home</a></li>
-                <li><a href="#section2">About</a></li>
-                <li><a href="#section3">Web</a></li>
-                <li><a href="#section4">App</a></li>
-                <li><a href="#section5">Contact</a></li>
-            </ul>
-        </nav>
+            <nav id="nav">
+                <div class="mNav">
+                    <span class="nav-icon"></span><span class="nav-icon"></span><span class="nav-icon"></span><span class="nav-icon"></span>
+                </div>
+                <ul class="menu">
+                    <li class="active"><a href="#section1">Home</a></li>
+                    <li><a href="#section2">About</a></li>
+                    <li><a href="#section3">Web</a></li>
+                    <li><a href="#section4">App</a></li>
+                    <li><a href="#section5">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main id="contents">
         <div class="inner">
