--- a/index.html
+++ b/index.html
@@ -195,19 +195,7 @@
                         <div class="glass">
                             <div class="camera"></div>
                             <div class="screen">
-                                <?xml version="1.0" encoding="utf-8"?>
-                                <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                    viewBox="0 0 32.2 28.5" style="enable-background:new 0 0 32.2 28.5;" xml:space="preserve">
-                                <style type="text/css">
-                                    .st1{fill:none;stroke:#5d486d;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
-                                </style>
-                                <g>
-                                    <path class="st1" d="M4.6,5.9c0.4-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
-                                    <path class="st1" d="M28.6,5.9c0.5-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
-                                </g>
-                                <path class="st1 mouth" d="M3.1,18.3c0,0,2,0,13.2,0s12.8,0,12.8,0"/>
-                                </svg>
+                                <span class="blind">CSS로 만든 스마트폰, 앱디자인 '모두앱' 이미지</span>
                             </div>
                             <div class="hold"></div>
                         </div>
@@ -216,19 +204,7 @@
                         <div class="glass">
                             <div class="camera"></div>
                             <div class="screen">
-                                <?xml version="1.0" encoding="utf-8"?>
-                                <!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                    viewBox="0 0 32.2 28.5" style="enable-background:new 0 0 32.2 28.5;" xml:space="preserve">
-                                <style type="text/css">
-                                    .st1{fill:none;stroke:#484f6d;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
-                                </style>
-                                <g>
-                                    <path class="st1" d="M4.6,5.9c0.4-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
-                                    <path class="st1" d="M28.6,5.9c0.5-0.2,0.8-0.5,1-1c0.3-0.8-0.2-1.7-1-2s-1.7,0.2-2,1s0.2,1.7,1,2"/>
-                                </g>
-                                <path class="st1 mouth" d="M3.1,18.3c0,0,2,0,13.2,0s12.8,0,12.8,0"/>
-                                </svg>
+                                <span class="blind">CSS로 만든 스마트폰, 앱디자인 '모두앱' 이미지</span>
                             </div>
                             <div class="hold"></div>
                         </div>
@@ -247,7 +223,9 @@
                                 <span></span>
                             </div> 
                         </div>
-                        <div class="modal_main"></div> 
+                        <div class="modal_main">
+                            <img src="images/app_design_good_mood.jpg" alt="숙면을 돕는 어플리케이션 디자인, 굿 무드앱디자인">
+                        </div> 
                     </div>  
                 </div>
             </div>
