--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
     <main id="contents">
         <div class="inner">
             <div id="section1">
-                <div class="home_text">
-                    <p><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></p>
+                <div class="stack">
+                    <div class="card">
+                        <p class="portfolio"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></p>
+                    </div>
+                    <div class="card">2</div>
+                    <div class="card">3</div>
+                    <div class="card">4</div>
+                    <div class="card">5</div>
                 </div>
             </div>
             <div id="section2">
