card stack 드디어 완성 ㅠㅠ 히잉

--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
         <div class="inner">
             <div id="section1">
                 <div class="stack">
-                    <div class="card">
-                        <p class="portfolio"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></p>
+                    <div class="card live">
+                        <p class="portfolio"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></p> 
+                        <span class="clickme">Click me</span>
                     </div>
-                    <div class="card">2</div>
-                    <div class="card">3</div>
-                    <div class="card">4</div>
-                    <div class="card">5</div>
+                    <div class="card">
+                        <p>한 땀 한 땀 예쁘게 만들었어요.</p>
+                        <span class="clickme">Click me</span>
+                    </div>
+                    <div class="card">
+                        <p>내용물은 알차요! 구경해주세요.</p>
+                        <span class="clickme">Click me</span>
+                    </div>
                 </div>
             </div>
             <div id="section2">
