포트폴리오 메인화면 최종 완성 (카드스택)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/nadyung_woman_sd_character.png" type="image/x-icon">
     <link rel="stylesheet" href="style/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -21,15 +22,15 @@
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
                     <style type="text/css">
-                        .st0{fill:#FFFFFF;}
-                        .st1{fill:#FFABAB;}
+                        .st0{fill:#FFFFFF;stroke:#FFABAB;stroke-width:8;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+                        .st1{fill:#FFABAB;stroke:#FFABAB;stroke-width:8;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
                     </style>
                     <g>
                         <path class="st0" d="M33,13C24.6,33.3,15.8,53.4,6.4,73.2c0.5-4.6,3-8.8,5.7-12.6c3.6-4.9,7.8-9.4,13-12.7
                             c5.1-3.3,11.2-5.2,17.3-4.8c2,0.1,4.1,0.6,5.7,1.7c3.6,2.5,4.2,7.4,4,11.8s-1.1,8.9,0.6,12.9c2.2,5.3,8.5,8.1,14.3,7.7
-                            c5.8-0.4,11-3.4,15.6-6.9c2.4-1.8,4.8-3.9,6.3-6.5c1.6-2.6,2.2-5.9,1.1-8.8"/>
+                            s11-3.4,15.6-6.9c2.4-1.8,4.8-3.9,6.3-6.5c1.6-2.6,2.2-5.9,1.1-8.8"/>
                         <g>
-                            <path class="st1" d="M30.8,12.4C22.5,32.5,13.7,52.4,4.5,72c1.4,0.6,2.8,1.2,4.1,1.7C10.5,61.1,24,48.1,36.4,45.7
+                            <path class="st1" d="M30.8,12.4C22.5,32.5,13.7,52.4,4.5,72c1.4,0.6,2.8,1.2,4.1,1.7c1.9-12.6,15.4-25.6,27.8-28
                                 c3.8-0.7,9-1,11.6,2.3c1.9,2.4,1.9,5.7,1.8,8.6c-0.2,5.4-1.3,10.9,1.8,15.7c5.1,8.1,16,8.4,24,4.8c8.6-3.9,19.6-12.1,16.6-22.8
                                 c-0.8-2.8-5.2-1.6-4.4,1.2c2.1,7.5-6,13.1-11.7,16.2c-5.7,3.2-13.3,4.8-18.8,0.2C49,65,58.9,51.2,50.2,43.7
                                 c-7.5-6.5-20.6-1.6-27.6,3.2C14.4,52.6,5.8,62.4,4.2,72.6c-0.3,2.3,2.9,4.3,4.1,1.7c9.4-20,18.4-40.3,26.8-60.7
@@ -37,13 +38,8 @@
                         </g>
                     </g>
                     <g>
-                        <path class="st0" d="M89.4,41.8c-1.2,1.7,0.5,4.5,1.5,5.6c0.6,0.7,1.1,0.9,1.5,0.9c0.8,0.1,1.6-0.2,2.1-0.8s0.8-1.3,1.1-2.1
-                            c0.3-0.9,0.5-1.9,0.4-2.8c0-0.2-0.4-1.6-1.6-2.2c-0.6-0.3-1.2-0.2-1.9-0.1C91.4,40.7,90.1,40.9,89.4,41.8z"/>
-                        <g>
-                            <path class="st1" d="M87.4,40.7c-1.6,2.7-0.2,6,1.7,8.1c2.3,2.7,6.1,2.2,7.9-0.9c1.4-2.5,1.9-6.1-0.2-8.4c-2.2-2.3-6.9-1.7-9,0.7
-                                c-1.9,2.2,1.3,5.4,3.2,3.2c0.4-0.5,2-1.1,2.5-0.7c0.7,0.5,0,2.1-0.2,2.7c-0.4,0.9-0.4,0.9-1,0.2c-0.4-0.6-1.3-1.8-0.9-2.5
-                                C92.8,40.4,88.9,38.1,87.4,40.7z"/>
-                        </g>
+                        <path class="st0" d="M86.1,38.6c-1.2,1.7,0.5,4.5,1.5,5.6c0.6,0.7,1.1,0.9,1.5,0.9c0.8,0.1,1.6-0.2,2.1-0.8s0.8-1.3,1.1-2.1
+                            c0.3-0.9,0.5-1.9,0.4-2.8c0-0.2-0.4-1.6-1.6-2.2c-0.6-0.3-1.2-0.2-1.9-0.1C88.1,37.5,86.8,37.7,86.1,38.6z"/>
                     </g>
                     </svg>
             </h1>
@@ -66,16 +62,26 @@
             <div id="section1">
                 <div class="stack">
                     <div class="card live">
-                        <p class="portfolio"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></p> 
-                        <span class="clickme">Click me</span>
+                        <div class="cartoon">
+                            <h2 class="portfolio"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></h2> 
+                            <span class="clickme">Click</span>
+                        </div>
                     </div>
                     <div class="card">
-                        <p>한 땀 한 땀 예쁘게 만들었어요.</p>
-                        <span class="clickme">Click me</span>
+                        <div class="cartoon">
+                            <div class="bubble mini bottom"><img src="images/8bit_heart.png" alt="8bit pixel heart icon"></div>
+                            <p>Thank you for stopping by...</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <p>내용물은 알차요! 구경해주세요.</p>
-                        <span class="clickme">Click me</span>
+                        <div class="cartoon">
+                            <ul>
+                                <li><img src="images/google-chrome_logo.png" alt="구글 크롬 브라우저"></li>
+                                <li><img src="images/firefox_logo.png" alt="파이어폭스 브라우저"></li>
+                                <li><img src="images/edge_logo.png" alt="마이크로 소프트 엣지 브라우저"></li>
+                            </ul>
+                            <p>Chrome, Firefox, Edge 브라우저에 최적화 되어있습니다.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -179,6 +185,13 @@
                     </div>
                     <div class="work">
                         <div class="clone cello">
+                            <div>
+                                <svg height="60" width="180" xmlns="http://www.w3.org/2000/svg">
+                                    <rect class="shape" height="60" width="180" />
+                                        <title>animation border</title>
+                                </svg>
+                                <div class="go_site"><a href="http://puiux.kr/cello/cello" target="_blank">Go site</a></div>
+                            </div>
                         </div>
                     </div>
                     <div class="txt_head cello_head">
@@ -193,6 +206,13 @@
                     </div>
                     <div class="work">
                         <div class="clone dat">
+                            <div>
+                                <svg height="60" width="180" xmlns="http://www.w3.org/2000/svg">
+                                    <rect class="shape" height="60" width="180" />
+                                        <title>animation border</title>
+                                </svg>
+                                <div class="go_site"><a href="http://puiux.kr/dat/dat" target="_blank">Go site</a></div>
+                            </div>
                         </div>
                     </div>
                     <div class="txt_head dat_head">
@@ -207,6 +227,13 @@
                     </div>
                     <div class="work">
                         <div class="clone mnh">
+                            <div>
+                                <svg height="60" width="180" xmlns="http://www.w3.org/2000/svg">
+                                    <rect class="shape" height="60" width="180" />
+                                        <title>animation border</title>
+                                </svg>
+                                <div class="go_site"><a href="http://puiux.kr/mnh/mnh" target="_blank">Go site</a></div>
+                            </div>
                         </div>
                     </div>
                     <div class="txt_head mnh_head">
@@ -221,6 +248,13 @@
                     </div>
                     <div class="work">
                         <div class="clone lol">
+                            <div>
+                                <svg height="60" width="180" xmlns="http://www.w3.org/2000/svg">
+                                    <rect class="shape" height="60" width="180" />
+                                        <title>animation border</title>
+                                </svg>
+                                <div class="go_site"><a href="http://puiux.kr/lol/lol" target="_blank">Go site</a></div>
+                            </div>
                         </div>
                     </div>
                     <div class="txt_head lol_head">
