--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        $(window).on('load', function() {
+			$(".loader-wrapper").fadeOut("slow");
+		});
+    </script>
 </head>
 <body>
     <div class="loader-wrapper">
