--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </div>
         </div><!--inner-->
     </main>
-    <footer></footer>
+    <footer><p>&copy; 박현정의 포트폴리오</p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script data-cfasync="false" src="js/form-submission-handler.js"></script>
